--- a/allocative_derive/Cargo.toml
+++ b/allocative_derive/Cargo.toml
@@ -8,6 +8,6 @@ description = "Implementation of derive(Allocative) for allocative crate"
 proc-macro = true
 
 [dependencies]
-quote = { workspace = true }
-proc-macro2 = { workspace = true }
-syn = { workspace = true }
+quote = "1.0.3"
+proc-macro2 = "1.0"
+syn = { version = "1.0.27", features = ["extra-traits", "full"] }
